Network/Infra/RDNS/RDNSTCPService.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-rdns
  namespace: core-prod
spec:
  clusterIP: None
  allocateLoadBalancerNodePorts: false
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Local
  ports:
  - name: tcp-53
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app.kubernetes.io/instance: rdns-core
  sessionAffinity: None
