Network/Infra/RDNS/UDPDNSService.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-rdns-gateway
  namespace: core-prod
spec:
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.1.1.84
  ports:
  - name: udp-53
    port: 53
    protocol: UDP
    targetPort: 53
  selector:
    app.kubernetes.io/instance: traefik-core
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
