Network/Infra/RDNS/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rdns-gateway
spec:
  selector:
    istio: ingress # use istio default ingress gateway
  servers:
    - port:
        number: 853
        name: dns-tls
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - resolvemy.host
