Network/Infra/RDNS/TCPDNS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rdns-tcp
spec:
  hosts:
    - '*'
  gateways:
    - rdns-gateway
  tcp:
    - match:
        - port: 53
      route:
        - destination:
            host: dns-rdns-core
            port:
              number: 53
